--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: lydgate
 
 pkgname=mlocate
-pkgver=0.22.2
-pkgrel=2
+pkgver=0.22.3
+pkgrel=1
 pkgdesc="Faster merging drop-in for slocate"
 arch=('i686' 'x86_64')
 url="http://carolina.mff.cuni.cz/~trmac/blog/mlocate"
@@ -16,10 +16,10 @@ depends=('glibc' 'sh')
 backup=('etc/updatedb.conf'
         'etc/cron.daily/updatedb')
 install=mlocate.install
-source=(https://fedorahosted.org/releases/m/l/mlocate/mlocate-$pkgver.tar.bz2
+source=(https://fedorahosted.org/releases/m/l/mlocate/mlocate-$pkgver.tar.xz
 	updatedb.conf
 	updatedb.cron.daily)
-md5sums=('27de49a88b8657f50fda02d152b8a5f1'
+md5sums=('eb09c57c25ab98b74cbd45234f3f7851'
          '66898efb290eff4efd44a0b94fe3927d'
          'cde5da81bebad2de556ef2e43d895e13')
 
