--- a/xdelta3/trunk/PKGBUILD
+++ b/xdelta3/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Henning Garus <henning.garus@gmail.com>
 
 pkgname=xdelta3
-pkgver=3.0w
+pkgver=3.0y
 pkgrel=1
 pkgdesc="A diff utility which works with binary files"
 arch=('i686' 'x86_64')
@@ -13,16 +13,13 @@ license=('GPL')
 makedepends=('python')
 optdepends=('python: for python modules')
 source=(http://xdelta.googlecode.com/files/xdelta$pkgver.tar.gz
-        xdelta3-makefile.patch
-        xdelta3-xz.patch)
-md5sums=('59feb294c53f09d253dd317d3d708f16'
-         '35aa0d20a27791addeb929591a78bd3f'
-         'fb1e685d810a15f04b7bdbc9a3f3e635')
+        xdelta3-makefile.patch)
+md5sums=('8246e6ba89a5a6b9efc24f9552fcf940'
+         '378e9a735d92fb2fc695ed9ce2fad2d5')
 
 build() {
   cd $srcdir/xdelta$pkgver
   patch -Np1 -i $srcdir/xdelta3-makefile.patch
-  patch -Np1 -i $srcdir/xdelta3-xz.patch
   
   # xdelta3 binary
   make xdelta3 || return 1
