--- a/windowmaker/trunk/PKGBUILD
+++ b/windowmaker/trunk/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: Daniel Isenmann <daniel@archlinux.org>
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 pkgname=windowmaker
 pkgver=0.92.0
-pkgrel=7
+pkgrel=8
 pkgdesc="An X11 window manager with a NEXTSTEP look and feel"
 arch=(i686 x86_64)
 url="http://www.windowmaker.info/"
@@ -26,7 +26,7 @@ build() {
   automake || return 1
   [ -z "$LINGUAS" ] && export LINGUAS="`ls po/*.po | sed 's:po/\(.*\)\.po$:\1:'`"
   ./configure --prefix=/usr --sysconfdir=/etc \
-    --with-gnustepdir=/usr/share/GNUstep --with-nlsdir=/usr/share/locale \
+    --with-gnustepdir=/usr/lib/GNUstep --with-nlsdir=/usr/share/locale \
     --enable-xinerama  || return 1
   make || return 1
   make DESTDIR=$pkgdir install || return 1
