--- a/cmus/trunk/PKGBUILD
+++ b/cmus/trunk/PKGBUILD
@@ -4,14 +4,16 @@
 
 pkgname=cmus
 pkgver=2.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A very feature-rich ncurses-based music player"
 arch=('i686' 'x86_64')
 url="http://cmus.sourceforge.net/"
 license=('GPL')
 # namcap assured me it was safe to remove ncurses and the like... /shrug
-depends=(libao libmpcdec 'ffmpeg' flac libmad 'faad2')
-source=(http://downloads.sourceforge.net/project/$pkgname/$pkgname-v$pkgver.tar.bz2)
+depends=('sh' 'libao' 'libmpcdec' 'ffmpeg' 'flac' 'libmad' 'faad2')
+makedepends=('libmp4v2')
+optdepends=('libmp4v2')
+source=("http://downloads.sourceforge.net/$pkgname/$pkgname-v$pkgver.tar.bz2")
 md5sums=('8039df4b08b9cbc2e050ab2922e6d99d')
 
 build() {
@@ -23,5 +25,9 @@ build() {
   export CONFIG_ARTS=n
   ./configure prefix=/usr || return 1
   make || return 1
+}
+
+package() {
+  cd $srcdir/$pkgname-v$pkgver
   make DESTDIR=$pkgdir install || return 1
 }
