--- a/python-opengl/trunk/PKGBUILD
+++ b/python-opengl/trunk/PKGBUILD
@@ -1,24 +1,31 @@
 # $Id$
+# Maintainer:
 # Contributor: Josh Taylor <joshtaylor.mail@gmail.com>
 # Contributor: simo <simo@archlinux.org>
-# Maintainer: Douglas Soares de Andrade <douglas@archlinux.org>
+# Contributor: Douglas Soares de Andrade <douglas@archlinux.org>
 
 pkgname=python-opengl
-pkgver=3.0.1a1
+pkgver=3.0.1
 pkgrel=1
 pkgdesc="The cross platform Python binding to OpenGL and related APIs"
-arch=(i686 x86_64)
+arch=('any')
 license=('BSD')
 depends=('python' 'tk' 'freeglut' 'setuptools')
 provides=('pyopengl' 'python-pyopengl')
 conflicts=('pyopengl' 'python-pyopengl')
 url="http://pyopengl.sourceforge.net"
-source=(http://downloads.sourceforge.net/pyopengl/PyOpenGL-$pkgver.tar.gz LICENSE)
+source=(http://downloads.sourceforge.net/pyopengl/PyOpenGL-$pkgver.tar.gz
+	'LICENSE')
+md5sums=('221d4a6a0928fcfeef26751370ec5f52'
+         '0b53c508a63e5dbaf44cdfb0fa103b3a')
 
 build() {
-    cd $startdir/src/PyOpenGL-$pkgver
-    python setup.py install --root=$startdir/pkg
-    install -D -m644 ../LICENSE $pkgdir/usr/share/licenses/$pkgname/LICENSE
+  /bin/true
 }
-md5sums=('3858f254cca14a3360ce818bf1a2b15f'
-         '0b53c508a63e5dbaf44cdfb0fa103b3a')
+
+package() {
+  cd ${srcdir}/PyOpenGL-$pkgver
+  python setup.py install --root=${pkgdir} || return 1
+  install -Dm644 ${srcdir}/LICENSE \
+    ${pkgdir}/usr/share/licenses/$pkgname/LICENSE
+}
