--- a/flite/trunk/PKGBUILD
+++ b/flite/trunk/PKGBUILD
@@ -1,16 +1,17 @@
 # $Id$
-# Maintainer: Simo Leone <simo@archlinux.org>
+# Maintainer:
+# Contributor: Simo Leone <simo@archlinux.org>
+
 pkgname=flite
-pkgver=1.3
-pkgrel=3
+pkgver=1.4
+pkgrel=1
 pkgdesc="A lighweight version of festival speech synthesis"
 arch=('i686' 'x86_64')
 url="http://www.speech.cs.cmu.edu/flite/"
 license=('custom')
 depends=('glibc')
-source=(http://www.speech.cs.cmu.edu/flite/packed/${pkgname}-${pkgver}/${pkgname}-${pkgver}-release.tar.gz)
-md5sums=('ae0aca1cb7b4801f4372f3a75a9e52b5')
-sha1sums=('233144a772de72741ae1aa2292f672c30224afb3')
+source=(http://www.speech.cs.cmu.edu/flite/packed/${pkgname}-${pkgver}/${pkgname}-${pkgver}-release.tar.bz2)
+md5sums=('b7c3523b3bbc6f29ce61e6650cd9a428')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}-release"
@@ -20,14 +21,10 @@ build() {
   sed -i 's/cmu_us_kal/cmu_us_kal16/' config/config || return 1
   
   make || return 1
-  
-  #Ugly hack for bad makefile (lib isn't a dir)
-  if [ "$CARCH" = "i686" ]; then
-    sed -i 's#@ $(MAKE) -C lib --no-print-directory install#$(INSTALL) -m 644 build/i386-linux-gnu/lib/*.a $(INSTALLLIBDIR)#g' Makefile || return 1
-  else
-    sed -i 's#@ $(MAKE) -C lib --no-print-directory install#$(INSTALL) -m 644 build/x86_64-linux-gnu/lib/*.a $(INSTALLLIBDIR)#g' Makefile || return 1
-  fi
+}
 
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}-release"
   make prefix="${pkgdir}/usr" install || return 1
   install -D -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE" || return 1
 }
