--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libspectre
-pkgver=0.2.3
+pkgver=0.2.4
 pkgrel=1
 pkgdesc="Small library for rendering Postscript documents"
 arch=(i686 x86_64)
@@ -11,7 +11,7 @@ url="http://libspectre.freedesktop.org/wiki/"
 depends=('ghostscript')
 options=('!libtool')
 source=(http://libspectre.freedesktop.org/releases/${pkgname}-${pkgver}.tar.gz)
-sha1sums=('3cf34a8cdf9fa50abc7af8069804abc81731521e')
+md5sums=('1dddf8d28761372c74153d6fbc644574')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
