--- a/rhythmbox/repos/extra-i686/PKGBUILD
+++ b/rhythmbox/repos/extra-i686/PKGBUILD
@@ -1,25 +1,27 @@
-# $Id: PKGBUILD 59390 2009-11-23 11:09:53Z ibiru $
+# $Id: PKGBUILD 59389 2009-11-23 11:08:46Z ibiru $
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=rhythmbox
-pkgver=0.12.6
+pkgver=0.12.7
 pkgrel=1
 pkgdesc="An iTunes-like music player/libary"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.rhythmbox.org"
-depends=('libgpod>=0.7.2' 'libsoup-gnome>=2.28.1' 'gnome-media>=2.28.0' 'totem-plparser>=2.28.1' 'musicbrainz>=2.1.5' 'libmtp>=0.3.7' 'libnotify>=0.4.5' 'lirc-utils' 'desktop-file-utils' 'gstreamer0.10-python>=0.10.16' 'gstreamer0.10-base-plugins' 'gstreamer0.10-good-plugins' 'pygtk>=2.16.0' 'gvfs>=1.4.1' 'hicolor-icon-theme')
+depends=('libgpod>=0.7.2' 'libsoup-gnome>=2.28.2' 'gnome-media>=2.28.5' 'totem-plparser>=2.28.2' 'musicbrainz>=2.1.5' 'libmtp>=1.0.2' 'libnotify>=0.4.5' 'lirc-utils' 'desktop-file-utils' 'gstreamer0.10-python>=0.10.17' 'gstreamer0.10-base-plugins' 'gstreamer0.10-good-plugins' 'pygtk>=2.16.0' 'gvfs>=1.4.1' 'hicolor-icon-theme')
 makedepends=('pkgconfig' 'gnome-doc-utils>=0.18.0' 'intltool' 'brasero>=2.28.1')
 optdepends=('gstreamer0.10-ugly-plugins: Extra media codecs'
             'gstreamer0.10-bad-plugins: Extra media codecs'
             'gstreamer0.10-ffmpeg: Extra media codecs'
             'brasero: cd burning'
-            'gnome-python: various plugins')
+            'gnome-python: various plugins'
+            'pywebkitgtk: context panel plugin'
+            'python-mako: context panel plugin')
 options=('!libtool' '!emptydirs')
 install=rhythmbox.install
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/0.12/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('ddffa5b7e0e0fe81044354998fd91a58d4ff526746b17a6b638e0e8ea1ac9684')
+sha256sums=('4ab28b93b2e9d7bc9338194ba6e01549362fdd5b0cf2806da091fbfb2c2a8362')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
