--- a/rhythmbox/trunk/PKGBUILD
+++ b/rhythmbox/trunk/PKGBUILD
@@ -3,14 +3,14 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=rhythmbox
-pkgver=0.12.6
+pkgver=0.12.7
 pkgrel=2
 pkgdesc="An iTunes-like music player/libary"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.rhythmbox.org"
-depends=('libgpod>=0.7.2' 'libsoup-gnome>=2.29.90' 'gnome-media>=2.28.5' 'totem-plparser>=2.29.1' 'musicbrainz>=2.1.5' 'libmtp>=0.3.7' 'libnotify>=0.4.5' 'lirc-utils' 'desktop-file-utils' 'gstreamer0.10-python>=0.10.17' 'gstreamer0.10-base-plugins' 'gstreamer0.10-good-plugins' 'pygtk>=2.17.0' 'gvfs>=1.5.3' 'hicolor-icon-theme')
-makedepends=('pkgconfig' 'gnome-doc-utils>=0.18.0' 'intltool' 'brasero>=2.29.90')
+depends=('libgpod>=0.7.2' 'libsoup-gnome>=2.29.91' 'gnome-media>=2.29.91' 'totem-plparser>=2.29.1' 'musicbrainz>=2.1.5' 'libmtp>=1.0.2' 'libnotify>=0.4.5' 'lirc-utils' 'desktop-file-utils' 'gstreamer0.10-python>=0.10.17' 'gstreamer0.10-base-plugins' 'gstreamer0.10-good-plugins' 'pygtk>=2.17.0' 'gvfs>=1.5.4' 'hicolor-icon-theme')
+makedepends=('pkgconfig' 'gnome-doc-utils>=0.19.5' 'intltool' 'brasero>=2.29.91')
 optdepends=('gstreamer0.10-ugly-plugins: Extra media codecs'
             'gstreamer0.10-bad-plugins: Extra media codecs'
             'gstreamer0.10-ffmpeg: Extra media codecs'
@@ -20,14 +20,11 @@ optdepends=('gstreamer0.10-ugly-plugins: Extra media codecs'
             'python-mako: context panel plugin')
 options=('!libtool' '!emptydirs')
 install=rhythmbox.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/0.12/${pkgname}-${pkgver}.tar.bz2
-        totem-plparser-api.patch)
-sha256sums=('ddffa5b7e0e0fe81044354998fd91a58d4ff526746b17a6b638e0e8ea1ac9684'
-            '5fd30bb1812cfeccdc78714c6ccc42a3c8296aa939f9cc5a5e65991cacf6015f')
+source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/0.12/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('4ab28b93b2e9d7bc9338194ba6e01549362fdd5b0cf2806da091fbfb2c2a8362')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -Np1 -i "${srcdir}/totem-plparser-api.patch" || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
       --libexecdir=/usr/lib/rhythmbox \
       --localstatedir=/var --disable-static \
