--- a/glproto/trunk/PKGBUILD
+++ b/glproto/trunk/PKGBUILD
@@ -1,15 +1,15 @@
 # $Id$
-# Maintainer: Alexander Baldeck <alexander@archlinux.org>
-# Contributor: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Jan de Groot <jgc@archlinux.org>
+# Contributor: Alexander Baldeck <alexander@archlinux.org>
 pkgname=glproto
 pkgver=1.4.11
-pkgrel=1
+pkgrel=2
 pkgdesc="X11 OpenGL extension wire protocol"
-arch=(i686 x86_64)
+arch=(any)
 url="http://xorg.freedesktop.org/"
 license=('custom')
 source=(http://xorg.freedesktop.org/releases/individual/proto/${pkgname}-${pkgver}.tar.bz2
-	COPYING)
+        COPYING)
 md5sums=('78e7c4dc7dcb74b1869fee7897e00f59'
          'a2228066bf4e15d351290deec0d9c250')
 
