--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=iso-codes
-pkgver=3.10.1
+pkgver=3.14
 pkgrel=1
-arch=(i686 x86_64)
+arch=(any)
 license=('LGPL')
 pkgdesc="Lists of the country, language, and currency names"
-source=(ftp://pkg-isocodes.alioth.debian.org/pub/pkg-isocodes/${pkgname}-${pkgver}.tar.bz2)
 url="http://pkg-isocodes.alioth.debian.org/"
-md5sums=('1db1466d1ea63fe5fc349b7ba8b189fb')
+source=(ftp://pkg-isocodes.alioth.debian.org/pub/pkg-isocodes/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('b4bedcd57de703ac4f9f4c21a77dc7d5')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
