--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,11 +1,11 @@
 # $Id: PKGBUILD 356 2008-04-18 22:56:27Z aaron $
-#Maintainer: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=dri2proto
 pkgver=2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="X11 DRI protocol"
-arch=(i686 x86_64)
+arch=(any)
 license=('custom')
 url="http://xorg.freedesktop.org/"
 source=(${url}/releases/individual/proto/${pkgname}-${pkgver}.tar.bz2)
@@ -16,6 +16,7 @@ build() {
   ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
+
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/" || return 1
 }
