--- a/kdevplatform/trunk/PKGBUILD
+++ b/kdevplatform/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=kdevplatform
-pkgver=0.9.98
-_kdevelopver=3.9.98
+pkgver=0.9.99
+_kdevelopver=3.9.99
 pkgrel=1
 pkgdesc="A C/C++ development platform for KDE"
 arch=('i686' 'x86_64')
@@ -15,7 +15,7 @@ optdepends=("kdesdk-kompare: difference checking")
 makedepends=('cmake' 'automoc4')
 install=${pkgname}.install
 source=("http://download.kde.org/unstable/kdevelop/${_kdevelopver}/src/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('dcdc427d8be4d8fa721f7354ac4406ed')
+md5sums=('180ee3573bd3d5ba805acc17d44fcbab')
 
 build() {
   cd ${srcdir}
@@ -24,8 +24,7 @@ build() {
   cmake ../${pkgname}-${pkgver} \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_SKIP_RPATH=ON \
-    -DCMAKE_{SHARED,MODULE,EXE}_LINKER_FLAGS='-Wl,--no-undefined -Wl,--as-needed'
+    -DCMAKE_SKIP_RPATH=ON
   make || return 1
 }
 
