--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=kdevelop
-pkgver=3.9.98
+pkgver=3.9.99
 pkgrel=1
 pkgdesc="A C/C++ development environment for KDE"
 arch=('i686' 'x86_64')
 url="http://www.kdevelop.org/"
 license=('GPL')
-depends=('kdebase-workspace' 'kdevplatform>=0.9.98')
+depends=('kdebase-workspace' 'kdevplatform>=0.9.99')
 makedepends=('cmake' 'automoc4' 'perl')
 install=${pkgname}.install
 source=("http://download.kde.org/unstable/${pkgname}/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('335fa118aa57c25a1793d2c45526a89f')
+md5sums=('4b0b9bb343da46ead3ae9632a0bd9ce9')
 
 build() {
   cd ${srcdir}
@@ -22,8 +22,7 @@ build() {
   cmake ../${pkgname}-${pkgver} \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_SKIP_RPATH=ON \
-    -DCMAKE_{SHARED,MODULE,EXE}_LINKER_FLAGS='-Wl,--no-undefined -Wl,--as-needed'
+    -DCMAKE_SKIP_RPATH=ON
   make || return 1
 }
 
