--- a/kdevplatform/trunk/PKGBUILD
+++ b/kdevplatform/trunk/PKGBUILD
@@ -4,7 +4,6 @@
 
 pkgname=kdevplatform
 pkgver=0.9.99
-_kdevelopver=3.9.99
 pkgrel=1
 pkgdesc="A C/C++ development platform for KDE"
 arch=('i686' 'x86_64')
@@ -14,7 +13,7 @@ depends=('kdelibs' 'boost' 'subversion' 'commoncpp2')
 optdepends=("kdesdk-kompare: difference checking")
 makedepends=('cmake' 'automoc4')
 install=${pkgname}.install
-source=("http://download.kde.org/unstable/kdevelop/${_kdevelopver}/src/${pkgname}-${pkgver}.tar.bz2")
+source=("http://download.kde.org/unstable/kdevelop/3.9.99/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('180ee3573bd3d5ba805acc17d44fcbab')
 
 build() {
